added voltorb.png to replace all the V's on the Bottom and Right sides of the Board

--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -1,3 +1,7 @@
-.homepage{
+.homepage-container{
+    position: absolute;
     text-align: center;
+    background-color: #00a478;
+    height:100%; 
+    width:100%;
 }
