--- a/src/styles/RightSide.css
+++ b/src/styles/RightSide.css
@@ -1,3 +1,9 @@
+.voltorb {
+    padding-top: 5px;
+    height: 40px;
+    width: 40px;
+}
+
 .right {
     grid-area: right;
     position: relative;
